pathmind-webapp/frontend/styles/views/experiment-view.css
.experiment-view .page-content {
    flex: 1 0 auto;
}

.experiment-view .view-section > vaadin-horizontal-layout:first-child > vaadin-vertical-layout:first-child {
    flex: 1 0 auto;
}

.experiment-view .section-title-label {
    flex: 1 0 auto;
    line-height: 1;
    white-space: nowrap;
}

.experiment-view .bold-label {
    /* same as .panel-title-label but since this panel is reused on Experiment &
       New Experiment view, we're going to keep it as .bold-label for now */
    box-sizing: border-box;
    width: 100%;
    font-size: var(--lumo-font-size-s);
    font-weight: normal;
    color: var(--lumo-secondary-text-color);
    line-height: 1;
    background: var(--pm-app-bg-color);
    padding: var(--lumo-space-xs);
    border-bottom: 1px solid var(--pm-grey-color-lightest);
}

.experiment-view .simulation-metrics-panel-header {
    background: var(--pm-app-bg-color);
    padding-right: var(--lumo-space-xs);
}

.experiment-view .simulation-metrics-panel-header iron-icon {
    --iron-icon-width: var(--lumo-font-size-s);
    --iron-icon-height: var(--lumo-font-size-s);
}

.experiment-view .simulation-metrics-panel-header .helper-icon:hover {
    color: var(--pm-secondary-text-color);
}

.experiment-view tag-label {
    margin: var(--lumo-space-xs) 0;
}

.experiment-view .view-section {
    box-sizing: border-box;
    width: 100%;
    min-width: auto;
    background: white;
    border-radius: 0;
    padding: 0;
}

.experiment-view .view-section > vaadin-vertical-layout {
    flex: 0 0 100%;
    overflow: visible;
}

.experiment-view.comparison-mode .view-section > vaadin-vertical-layout {
    flex: 1 1 50%;
}

.experiment-view .experiment-header {
    position: relative;
}

.experiment-view .middle-panel {
    flex: 1 1 auto;
    height: auto !important;
}

.experiment-view .middle-panel > vaadin-split-layout > vaadin-vertical-layout:last-child {
    border-left: 1px solid var(--pm-grey-color-lightest);
}

.experiment-view .middle-panel > vaadin-vertical-layout:last-child {
    flex: 1 1 auto;
    width: 50% !important;
    border-left: 1px solid var(--pm-grey-color-lightest);
    overflow: hidden;
}

.experiment-view .simulation-metrics-table-wrapper {
    box-sizing: border-box;
    flex: 1;
    width: 100%;
    font-size: var(--lumo-font-size-xs);
    line-height: 1.8;
    padding: var(--lumo-space-xs);
    padding-top: 0;
    overflow: auto;
}

.experiment-view .reward-variables-table {
    font-size: var(--lumo-font-size-xs);
}

.experiment-view .reward-variables-table.compact .header-row {
    display: block;
    justify-content: flex-start;
    line-height: 2rem;
    padding: 0;
}

.experiment-view .reward-variables-table .header-row span:last-child {
    display: none;
}

.experiment-view .simulation-metrics-table-wrapper .header {
    display: flex;
    justify-content: flex-end;
    position: sticky;
    width: 100%;
    top: 0;
    color: var(--pm-secondary-text-color);
    background-color: white;
    z-index: 1;
}

.experiment-view .metrics-wrapper .header span {
    justify-content: flex-end;
}

.experiment-view .reward-variables-table .goal-display-span {
    display: none;
}
.experiment-view .reward-variable-name-field {
    height: 1.75rem;
    border-radius: 3px;
    box-shadow: none;
}

.experiment-view .reward-variable-name {
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    cursor: pointer;
}

.experiment-view .reward-variables-table.disable-selection .reward-variable-name:not([chosen]) {
    background-color: var(--pm-grey-color-lightest);
    border-color: var(--pm-grey-color-lightest);
    cursor: default;
}

.experiment-view .metrics-wrapper span {
    display: flex;
    align-items: center;
    flex: 0 0 auto;
    height: 2rem;
    line-height: 1;
    margin-left: var(--lumo-space-s);
}

.experiment-view .metrics-wrapper,
.experiment-view .sparklines-wrapper,
.experiment-view .histograms-wrapper {
    flex: 1 0 0;
    line-height: 2rem;
}

.experiment-view .sparklines-wrapper .sparkline,
.experiment-view .histograms-wrapper .histogram {
    position: relative;
    width: 100px;
    height: 2rem !important;
    padding: var(--lumo-space-xxs) 0;
    margin-left: var(--lumo-space-s);
}

.experiment-view .sparklines-wrapper .sparkline data-chart,
.experiment-view .histograms-wrapper .histogram histogram-chart {
    width: 100%;
    height: 100%;
}

.experiment-view .sparklines-wrapper .sparkline vaadin-button {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    height: 1.32rem;
    line-height: 1.32rem;
    font-size: var(--lumo-font-size-s);
    padding: 0 var(--lumo-space-xs);
    transform: translate(-50%, -50%);
    margin: 0;
}

.experiment-view .sparklines-wrapper .sparkline:hover vaadin-button {
    display: block;
}

.experiment-view .metrics-wrapper {
    align-items: flex-end;
}

.experiment-view code-viewer {
    height: 100%;
    border: none;
    border-radius: 0;
}

.experiment-view.comparison-mode code-viewer {
    height: 16rem;
}

.experiment-view .observations-panel {
    max-height: 27rem;
    border: none;
    border-radius: 0;
}

.experiment-view .observations-table {
    padding-top: 0;
}

.experiment-view .observations-table vaadin-checkbox-group {
    font-size: var(--lumo-font-size-xs);
}

.experiment-view .bold-label + data-chart {
    flex: 1 1 auto;
    border: 1px solid var(--pm-grey-color);
    border-radius: var(--lumo-border-radius);
    overflow: hidden;
}

.experiment-view vaadin-tabs {
    box-shadow: inset 0 -1px 0 0 var(--lumo-contrast-10pct);
}

.experiment-view .histogram-chart-mean {
    font-size: var(--lumo-font-size-xs);
    margin: var(--lumo-space-m) var(--lumo-space-xxl) 0;
}

.experiment-view .color-box {
    display: inline-flex;
    align-self: center;
    width: var(--lumo-space-s);
    height: var(--lumo-space-s);
}

.experiment-view .color-box + span {
    font-size: var(--lumo-font-size-s);
    margin-left: var(--lumo-space-xs);
}

.metric-chart-panel {
    position: relative;
}

.metric-chart-panel vaadin-horizontal-layout tag-label {
    margin-left: var(--lumo-space-s);
}

.metric-chart-panel p {
    margin-top: 0;
}

.metric-chart-panel + vaadin-button {
    position: absolute;
    top: var(--lumo-space-l);
    right: var(--lumo-space-l);
    margin: 0;
}

.experiment-view .bottom-panel,
.experiment-view .row-2-of-3 vaadin-vertical-layout {
    flex: 1 1 auto;
}

.experiment-view .bottom-panel .row-2-of-3 .bold-label {
    position: sticky;
    top: 0;
    z-index: 1;
}

.experiment-view.comparison-mode .bottom-panel,
.experiment-view.comparison-mode .row-2-of-3 vaadin-vertical-layout {
    max-height: none;
}

.experiment-view vaadin-tabs {
    margin-bottom: 0;
}

.experiment-view .hint-label {
    color: var(--lumo-secondary-text-color);
    padding: 0 var(--lumo-space-s);
    margin-bottom: 0;
}

.experiment-view .hint-label iron-icon {
    --iron-icon-width: var(--lumo-font-size-s);
    --iron-icon-height: var(--lumo-font-size-s);
    margin-right: var(--lumo-space-xxs);
}

.experiment-view .buttons-wrapper {
    position: absolute;
    bottom: 0;
    right: 0;
}

.experiment-view .buttons-wrapper vaadin-button {
    min-width: auto;
    height: var(--lumo-size-s);
    font-size: var(--lumo-font-size-s);
    border-radius: 0;
    margin: 0;
}

.experiment-view .buttons-wrapper vaadin-button + vaadin-button:not([hidden]) {
    margin-left: -1px;
}

.experiment-view .buttons-wrapper .download-alp-link {
    margin-left: var(--lumo-space-s);
}

.experiment-view juicy-ace-editor {
    display: block;
}

.new-experiment-view .bold-label {
    margin-bottom: var(--lumo-space-xs);
}

.experiment-view .score {
    font-size: var(--lumo-font-size-xl);
    font-weight: bold;
    color: var(--lumo-primary-text-color);
    line-height: 1;
}

.training-status-details-panel vaadin-vertical-layout {
    width: auto !important;
    margin-left: var(--lumo-space-l);
}

.training-status-details-panel span,
.experiment-view elapsed-timer {
    font-size: var(--lumo-font-size-xs);
    line-height: 1.2;
}

.experiment-view elapsed-time {
    align-self: flex-start;
}

.training-status-details-panel span:first-child {
    color: var(--lumo-primary-text-color);
    font-weight: bold;
}

.experiment-view vaadin-progress-bar {
    width: 6rem;
    margin: var(--lumo-space-xs) 0 var(--lumo-space-xxs);
}

.experiment-view vaadin-progress-bar + div {
    display: flex;
}

.experiment-view vaadin-progress-bar + div span:last-child {
    margin-left: var(--lumo-space-xxxs);
}

.experiment-view .reason-why-the-training-stopped,
.experiment-view .error-label {
    box-sizing: border-box;
    display: inline-block;
    width: 100%;
    padding: var(--lumo-space-xxxs) var(--lumo-space-xs);
    border: 1px solid transparent;
    border-radius: 0;
}

.experiment-view.comparison-mode .reason-why-the-training-stopped {
    display: none;
}

.experiment-view .training-status-details-panel {
    height: 3rem;
}

.experiment-view .tag.error-label {
    margin-left: 0;
    margin-right: 0;
}

.experiment-view .reason-why-the-training-stopped:empty {
    display: none;
}

.experiment-view .comparison-panel {
    width: 100%;
    height: 100%;
}

.experiment-view .comparison-panel vaadin-split-layout {
    height: auto !important;
}

.experiment-view.comparison-mode .view-section {
    overflow-y: hidden;
}

.experiment-view.comparison-mode .middle-panel > vaadin-vertical-layout:last-child,
.experiment-view.comparison-mode .row-2-of-3,
.experiment-view.comparison-mode notes-field {
    width: 100% !important;
    border-left: none;
}

.experiment-view.comparison-mode .middle-panel,
.experiment-view.comparison-mode .bottom-panel {
    flex-direction: column;
}

.experiment-view.comparison-mode .middle-panel,
.experiment-view.comparison-mode .middle-panel > vaadin-split-layout {
    flex-shrink: 0;
    flex-basis: auto !important;
    height: auto !important;
}

.experiment-view.comparison-mode .middle-panel > vaadin-split-layout:nth-of-type(1) {
    flex: 1 0 auto;
    height: auto !important;
}

.experiment-view.comparison-mode .middle-panel > vaadin-vertical-layout:last-child {
    flex: 1 1 auto !important;
}

.experiment-view.comparison-mode .middle-panel > vaadin-split-layout {
    width: 100% !important;
}

.experiment-view.comparison-mode {
    height: calc(100vh - 5rem) !important;
}

.experiment-view.comparison-mode floating-close-button {
    position: absolute;
    top: var(--lumo-space-xs);
    right: var(--lumo-space-xs);
}

.share-with-support-instructions {
    position: relative;
}

.share-with-support-instructions h3 {
    margin-top: 0;
}

.share-with-support-instructions ~ vaadin-button {
    position: absolute;
    width: var(--lumo-button-size);
    height: var(--lumo-button-size);
    top: var(--lumo-space-s);
    right: var(--lumo-space-s);
    margin: 0;
}

